--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ h11==0.11.0
 idna==2.10
 kiwisolver==1.3.1
 numpy==1.19.4
-opencv-python==4.4.0.46
+opencv-contrib-python
 Pillow==8.0.1
 pip-tools==5.3.1
 pydantic==1.7.2
